god/error.txt
g++ -std=c++11 -Wall -g -c environment.cpp
environment.cpp: In member function ‘void game::Environment::printDescription()’:
environment.cpp:34:26: error: invalid use of incomplete type ‘class game::Monster’
   std::cout << it->second->getType() << ": " << it->second->getName() << std::endl;
                          ^
In file included from environment.cpp:1:0:
headers/environment.hpp:9:8: error: forward declaration of ‘class game::Monster’
  class Monster;
        ^
environment.cpp:34:59: error: invalid use of incomplete type ‘class game::Monster’
   std::cout << it->second->getType() << ": " << it->second->getName() << std::endl;
                                                           ^
In file included from environment.cpp:1:0:
headers/environment.hpp:9:8: error: forward declaration of ‘class game::Monster’
  class Monster;
        ^
environment.cpp: At global scope:
environment.cpp:42:51: error: no ‘game::Monster* game::Environment::getActor(std::string)’ member function declared in class ‘game::Environment’
 Monster * Environment::getActor(std::string target) {
                                                   ^
environment.cpp:72:41: error: no ‘void game::Environment::addActor(game::Actor*)’ member function declared in class ‘game::Environment’
 void Environment::addActor(Actor * actor) {
                                         ^
environment.cpp:89:70: error: no ‘std::unordered_map<std::basic_string<char>, game::Monster*>& game::Environment::getMonsters()’ member function declared in class ‘game::Environment’
 std::unordered_map<std::string, Monster*> & Environment::getMonsters() {
                                                                      ^
environment.cpp: In member function ‘void game::Environment::checkParticipation(game::Monster*)’:
environment.cpp:143:29: error: invalid use of incomplete type ‘class game::Monster’
   if(rand() % 5 > it->second->getLoyalty() && it->second->getName() != actor->getName()) {
                             ^
In file included from environment.cpp:1:0:
headers/environment.hpp:9:8: error: forward declaration of ‘class game::Monster’
  class Monster;
        ^
environment.cpp:143:57: error: invalid use of incomplete type ‘class game::Monster’
   if(rand() % 5 > it->second->getLoyalty() && it->second->getName() != actor->getName()) {
                                                         ^
In file included from environment.cpp:1:0:
headers/environment.hpp:9:8: error: forward declaration of ‘class game::Monster’
  class Monster;
        ^
environment.cpp:143:72: error: ‘actor’ was not declared in this scope
   if(rand() % 5 > it->second->getLoyalty() && it->second->getName() != actor->getName()) {
                                                                        ^
environment.cpp:144:14: error: invalid use of incomplete type ‘class game::Monster’
    it->second->setCombat(true);
              ^
In file included from environment.cpp:1:0:
headers/environment.hpp:9:8: error: forward declaration of ‘class game::Monster’
  class Monster;
        ^
environment.cpp:145:27: error: invalid use of incomplete type ‘class game::Monster’
    std::cout << it->second->getName() << " the " <<it->second->getType() << " joins the fray!" << std::endl;
                           ^
In file included from environment.cpp:1:0:
headers/environment.hpp:9:8: error: forward declaration of ‘class game::Monster’
  class Monster;
        ^
environment.cpp:145:62: error: invalid use of incomplete type ‘class game::Monster’
    std::cout << it->second->getName() << " the " <<it->second->getType() << " joins the fray!" << std::endl;
                                                              ^
In file included from environment.cpp:1:0:
headers/environment.hpp:9:8: error: forward declaration of ‘class game::Monster’
  class Monster;
        ^
make: *** [environment.o] Error 1
